src/uing/lib_ui/lib_ui.cr

    fun date_time_picker_set_time = uiDateTimePickerSetTime(d : Pointer(DateTimePicker), time : Pointer(Tm))
    fun date_time_picker_on_changed = uiDateTimePickerOnChanged(d : Pointer(DateTimePicker), f : (Pointer(DateTimePicker), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_date_time_picker = uiNewDateTimePicker : Pointer(DateTimePicker)
    fun new_date_picker = uiNewDatePicker : Pointer(DateTimePicker)
    fun new_time_picker = uiNewTimePicker : Pointer(DateTimePicker)
    alias MultilineEntry = Void
    fun multiline_entry_text = uiMultilineEntryText(e : Pointer(MultilineEntry)) : Pointer(LibC::Char)
    fun multiline_entry_set_text = uiMultilineEntrySetText(e : Pointer(MultilineEntry), text : Pointer(LibC::Char))
    fun multiline_entry_append = uiMultilineEntryAppend(e : Pointer(MultilineEntry), text : Pointer(LibC::Char))
    fun multiline_entry_on_changed = uiMultilineEntryOnChanged(e : Pointer(MultilineEntry), f : (Pointer(MultilineEntry), Pointer(Void) -> Void), data : Pointer(Void))
    fun multiline_entry_read_only = uiMultilineEntryReadOnly(e : Pointer(MultilineEntry)) : Bool
    fun multiline_entry_set_read_only = uiMultilineEntrySetReadOnly(e : Pointer(MultilineEntry), readonly : Bool)
    fun new_multiline_entry = uiNewMultilineEntry : Pointer(MultilineEntry)
    fun new_non_wrapping_multiline_entry = uiNewNonWrappingMultilineEntry : Pointer(MultilineEntry)
    alias MenuItem = Void
    fun menu_item_enable = uiMenuItemEnable(m : Pointer(MenuItem))
    fun menu_item_disable = uiMenuItemDisable(m : Pointer(MenuItem))
    fun menu_item_on_clicked = uiMenuItemOnClicked(m : Pointer(MenuItem), f : (Pointer(MenuItem), Pointer(Window), Pointer(Void) -> Void), data : Pointer(Void))
    fun menu_item_checked = uiMenuItemChecked(m : Pointer(MenuItem)) : Bool
    fun menu_item_set_checked = uiMenuItemSetChecked(m : Pointer(MenuItem), checked : Bool)
    alias Menu = Void
    fun menu_append_item = uiMenuAppendItem(m : Pointer(Menu), name : Pointer(LibC::Char)) : Pointer(MenuItem)
    fun menu_append_check_item = uiMenuAppendCheckItem(m : Pointer(Menu), name : Pointer(LibC::Char)) : Pointer(MenuItem)
    fun menu_append_quit_item = uiMenuAppendQuitItem(m : Pointer(Menu)) : Pointer(MenuItem)
    fun menu_append_preferences_item = uiMenuAppendPreferencesItem(m : Pointer(Menu)) : Pointer(MenuItem)
    fun menu_append_about_item = uiMenuAppendAboutItem(m : Pointer(Menu)) : Pointer(MenuItem)
    fun menu_append_separator = uiMenuAppendSeparator(m : Pointer(Menu))
    fun new_menu = uiNewMenu(name : Pointer(LibC::Char)) : Pointer(Menu)
    fun open_file = uiOpenFile(parent : Pointer(Window)) : Pointer(LibC::Char)
    fun open_folder = uiOpenFolder(parent : Pointer(Window)) : Pointer(LibC::Char)
    fun save_file = uiSaveFile(parent : Pointer(Window)) : Pointer(LibC::Char)
    fun msg_box = uiMsgBox(parent : Pointer(Window), title : Pointer(LibC::Char), description : Pointer(LibC::Char))
    fun msg_box_error = uiMsgBoxError(parent : Pointer(Window), title : Pointer(LibC::Char), description : Pointer(LibC::Char))
    alias Area = Void

    alias DrawContext = Void
    fun area_set_size = uiAreaSetSize(a : Pointer(Area), width : LibC::Int, height : LibC::Int)
    fun area_queue_redraw_all = uiAreaQueueRedrawAll(a : Pointer(Area))
    fun area_scroll_to = uiAreaScrollTo(a : Pointer(Area), x : LibC::Double, y : LibC::Double, width : LibC::Double, height : LibC::Double)
    fun area_begin_user_window_move = uiAreaBeginUserWindowMove(a : Pointer(Area))
    fun area_begin_user_window_resize = uiAreaBeginUserWindowResize(a : Pointer(Area), edge : WindowResizeEdge)
    fun new_area = uiNewArea(ah : Pointer(AreaHandler)) : Pointer(Area)
    fun new_scrolling_area = uiNewScrollingArea(ah : Pointer(AreaHandler), width : LibC::Int, height : LibC::Int) : Pointer(Area)
    alias DrawPath = Void

    fun draw_new_path = uiDrawNewPath(fill_mode : DrawFillMode) : Pointer(DrawPath)
    fun draw_free_path = uiDrawFreePath(p : Pointer(DrawPath))
    fun draw_path_new_figure = uiDrawPathNewFigure(p : Pointer(DrawPath), x : LibC::Double, y : LibC::Double)
    fun draw_path_new_figure_with_arc = uiDrawPathNewFigureWithArc(p : Pointer(DrawPath), x_center : LibC::Double, y_center : LibC::Double, radius : LibC::Double, start_angle : LibC::Double, sweep : LibC::Double, negative : Bool)
    fun draw_path_line_to = uiDrawPathLineTo(p : Pointer(DrawPath), x : LibC::Double, y : LibC::Double)
    fun draw_path_arc_to = uiDrawPathArcTo(p : Pointer(DrawPath), x_center : LibC::Double, y_center : LibC::Double, radius : LibC::Double, start_angle : LibC::Double, sweep : LibC::Double, negative : Bool)
    fun draw_path_bezier_to = uiDrawPathBezierTo(p : Pointer(DrawPath), c1x : LibC::Double, c1y : LibC::Double, c2x : LibC::Double, c2y : LibC::Double, end_x : LibC::Double, end_y : LibC::Double)
    fun draw_path_close_figure = uiDrawPathCloseFigure(p : Pointer(DrawPath))
    fun draw_path_add_rectangle = uiDrawPathAddRectangle(p : Pointer(DrawPath), x : LibC::Double, y : LibC::Double, width : LibC::Double, height : LibC::Double)
    fun draw_path_ended = uiDrawPathEnded(p : Pointer(DrawPath)) : Bool
    fun draw_path_end = uiDrawPathEnd(p : Pointer(DrawPath))
    fun draw_stroke = uiDrawStroke(c : Pointer(DrawContext), path : Pointer(DrawPath), b : Pointer(DrawBrush), p : Pointer(DrawStrokeParams))
    fun draw_fill = uiDrawFill(c : Pointer(DrawContext), path : Pointer(DrawPath), b : Pointer(DrawBrush))
    fun draw_matrix_set_identity = uiDrawMatrixSetIdentity(m : Pointer(DrawMatrix))
    fun draw_matrix_translate = uiDrawMatrixTranslate(m : Pointer(DrawMatrix), x : LibC::Double, y : LibC::Double)
    fun draw_matrix_scale = uiDrawMatrixScale(m : Pointer(DrawMatrix), x_center : LibC::Double, y_center : LibC::Double, x : LibC::Double, y : LibC::Double)
    fun draw_matrix_rotate = uiDrawMatrixRotate(m : Pointer(DrawMatrix), x : LibC::Double, y : LibC::Double, amount : LibC::Double)
    fun draw_matrix_skew = uiDrawMatrixSkew(m : Pointer(DrawMatrix), x : LibC::Double, y : LibC::Double, xamount : LibC::Double, yamount : LibC::Double)
    fun draw_matrix_multiply = uiDrawMatrixMultiply(dest : Pointer(DrawMatrix), src : Pointer(DrawMatrix))
    fun draw_matrix_invertible = uiDrawMatrixInvertible(m : Pointer(DrawMatrix)) : Bool
    fun draw_matrix_invert = uiDrawMatrixInvert(m : Pointer(DrawMatrix)) : Bool
    fun draw_matrix_transform_point = uiDrawMatrixTransformPoint(m : Pointer(DrawMatrix), x : Pointer(LibC::Double), y : Pointer(LibC::Double))
    fun draw_matrix_transform_size = uiDrawMatrixTransformSize(m : Pointer(DrawMatrix), x : Pointer(LibC::Double), y : Pointer(LibC::Double))
    fun draw_transform = uiDrawTransform(c : Pointer(DrawContext), m : Pointer(DrawMatrix))
    fun draw_clip = uiDrawClip(c : Pointer(DrawContext), path : Pointer(DrawPath))
    fun draw_save = uiDrawSave(c : Pointer(DrawContext))
    fun draw_restore = uiDrawRestore(c : Pointer(DrawContext))

    alias Attribute = Void
    fun free_attribute = uiFreeAttribute(a : Pointer(Attribute))
    fun attribute_get_type = uiAttributeGetType(a : Pointer(Attribute)) : AttributeType
    fun new_family_attribute = uiNewFamilyAttribute(family : Pointer(LibC::Char)) : Pointer(Attribute)
    fun attribute_family = uiAttributeFamily(a : Pointer(Attribute)) : Pointer(LibC::Char)
    fun new_size_attribute = uiNewSizeAttribute(size : LibC::Double) : Pointer(Attribute)
    fun attribute_size = uiAttributeSize(a : Pointer(Attribute)) : LibC::Double

    fun new_weight_attribute = uiNewWeightAttribute(weight : TextWeight) : Pointer(Attribute)
    fun attribute_weight = uiAttributeWeight(a : Pointer(Attribute))

    fun new_italic_attribute = uiNewItalicAttribute(italic : TextItalic) : Pointer(Attribute)
    fun attribute_italic = uiAttributeItalic(a : Pointer(Attribute))

    fun new_stretch_attribute = uiNewStretchAttribute(stretch : TextStretch) : Pointer(Attribute)
    fun attribute_stretch = uiAttributeStretch(a : Pointer(Attribute))
    fun new_color_attribute = uiNewColorAttribute(r : LibC::Double, g : LibC::Double, b : LibC::Double, a : LibC::Double) : Pointer(Attribute)
    fun attribute_color = uiAttributeColor(a : Pointer(Attribute), r : Pointer(LibC::Double), g : Pointer(LibC::Double), b : Pointer(LibC::Double), alpha : Pointer(LibC::Double))
    fun new_background_attribute = uiNewBackgroundAttribute(r : LibC::Double, g : LibC::Double, b : LibC::Double, a : LibC::Double) : Pointer(Attribute)

    fun new_underline_attribute = uiNewUnderlineAttribute(u : Underline) : Pointer(Attribute)
    fun attribute_underline = uiAttributeUnderline(a : Pointer(Attribute)) : Underline

    fun new_underline_color_attribute = uiNewUnderlineColorAttribute(u : UnderlineColor, r : LibC::Double, g : LibC::Double, b : LibC::Double, a : LibC::Double) : Pointer(Attribute)
    fun attribute_underline_color = uiAttributeUnderlineColor(a : Pointer(Attribute), u : Pointer(UnderlineColor), r : Pointer(LibC::Double), g : Pointer(LibC::Double), b : Pointer(LibC::Double), alpha : Pointer(LibC::Double))
    alias OpenTypeFeatures = Void
    fun new_open_type_features = uiNewOpenTypeFeatures : Pointer(OpenTypeFeatures)
    fun free_open_type_features = uiFreeOpenTypeFeatures(otf : Pointer(OpenTypeFeatures))
    fun open_type_features_clone = uiOpenTypeFeaturesClone(otf : Pointer(OpenTypeFeatures)) : Pointer(OpenTypeFeatures)
    fun open_type_features_add = uiOpenTypeFeaturesAdd(otf : Pointer(OpenTypeFeatures), a : LibC::Char, b : LibC::Char, c : LibC::Char, d : LibC::Char, value : UInt32)
    fun open_type_features_remove = uiOpenTypeFeaturesRemove(otf : Pointer(OpenTypeFeatures), a : LibC::Char, b : LibC::Char, c : LibC::Char, d : LibC::Char)
    fun open_type_features_get = uiOpenTypeFeaturesGet(otf : Pointer(OpenTypeFeatures), a : LibC::Char, b : LibC::Char, c : LibC::Char, d : LibC::Char, value : Pointer(UInt32)) : Bool
    fun open_type_features_for_each = uiOpenTypeFeaturesForEach(otf : Pointer(OpenTypeFeatures), f : Pointer(Void), data : Pointer(Void)) # FIXME: f is a function pointer
    fun new_features_attribute = uiNewFeaturesAttribute(otf : Pointer(OpenTypeFeatures)) : Pointer(Attribute)
    fun attribute_features = uiAttributeFeatures(a : Pointer(Attribute)) : Pointer(OpenTypeFeatures)
    alias AttributedString = Void
    fun new_attributed_string = uiNewAttributedString(initial_string : Pointer(LibC::Char)) : Pointer(AttributedString)
    fun free_attributed_string = uiFreeAttributedString(s : Pointer(AttributedString))
    fun attributed_string_string = uiAttributedStringString(s : Pointer(AttributedString)) : Pointer(LibC::Char)
    fun attributed_string_len = uiAttributedStringLen(s : Pointer(AttributedString)) : LibC::SizeT
    fun attributed_string_append_unattributed = uiAttributedStringAppendUnattributed(s : Pointer(AttributedString), str : Pointer(LibC::Char))
    fun attributed_string_insert_at_unattributed = uiAttributedStringInsertAtUnattributed(s : Pointer(AttributedString), str : Pointer(LibC::Char), at : LibC::SizeT)
    fun attributed_string_delete = uiAttributedStringDelete(s : Pointer(AttributedString), start : LibC::SizeT, _end : LibC::SizeT)
    fun attributed_string_set_attribute = uiAttributedStringSetAttribute(s : Pointer(AttributedString), a : Pointer(Attribute), start : LibC::SizeT, _end : LibC::SizeT)
    fun attributed_string_for_each_attribute = uiAttributedStringForEachAttribute(s : Pointer(AttributedString), f : Pointer(Void), data : Pointer(Void)) # FIXME: f is a function pointer
    fun attributed_string_num_graphemes = uiAttributedStringNumGraphemes(s : Pointer(AttributedString)) : LibC::SizeT
    fun attributed_string_byte_index_to_grapheme = uiAttributedStringByteIndexToGrapheme(s : Pointer(AttributedString), pos : LibC::SizeT) : LibC::SizeT
    fun attributed_string_grapheme_to_byte_index = uiAttributedStringGraphemeToByteIndex(s : Pointer(AttributedString), pos : LibC::SizeT) : LibC::SizeT
